Fix a number of problems reported by FindBugs
git-svn-id: https://svn.apache.org/repos/asf/turbine/core/trunk@1199856 13f79535-47bb-0310-9956-ffa450edef68