@@ -608,7 +608,7 @@ public class LDAPUser implements User
      */
     public void setAccessCounter(int cnt)
     {
-        setPerm(User.ACCESS_COUNTER, new Integer(cnt));
+        setPerm(User.ACCESS_COUNTER, Integer.valueOf(cnt));
     }
 
     /**
@@ -619,7 +619,7 @@ public class LDAPUser implements User
      */
     public void setAccessCounterForSession(int cnt)
     {
-        setTemp(User.SESSION_ACCESS_COUNTER, new Integer(cnt));
+        setTemp(User.SESSION_ACCESS_COUNTER, Integer.valueOf(cnt));
     }
 
     /**
@@ -893,7 +893,7 @@ public class LDAPUser implements User
      */
     public Integer getIdAsObj()
     {
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 
     /**
